clusters/my-cluster/releases/apps/authelia-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: apps-authelia
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.xinfra.ru`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: chain-authelia
          namespace: apps-authelia
      priority: 500
      services:
        - kind: Service
          name: authelia
          namespace: apps-authelia
          passHostHeader: true
          port: 80
          responseForwarding:
            flushInterval: 100ms
          scheme: http
          strategy: RoundRobin
          weight: 10
  tls:
    options:
      name: authelia
      namespace: apps-authelia
    secretName: wildcard-xinfra-ru-tls
